# Churn_Prediction_Retention_Analytics

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
dashboard/: powerbi_dashboard_spec.py
data/: customer_data_processed.csv
results/: business_insights_report.txt
src/: __init__.py  data_generation.py  eda_analysis.py  feature_engineering.py  insights_recommendations.py  ml_models.py  sql_queries.py
tests/: __init__.py  test_data_generation.py  test_insights.py
